tests/models/struct/unnamed/struct/fail/min_length.rs
use dade::model;
#[model]
struct InnerModel;
#[model]
struct TestModel (
   #[field(min_length = 2)]
    InnerModel
);
fn main() {}
